--- a/NewMiowk/app/src/main/res/values/strings.xml
+++ b/NewMiowk/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="category_numbers">Numbers</string>
+    <string name="category_family">Family</string>
+    <string name="category_colors">Colors</string>
+    <string name="category_phrases">Phrases</string>
 
 
 </resources>
